# my-config

files/ahk/: config.ahk
files/bash/: .bashrc
files/claunch/: CLaunch.ini  Design.ini
files/conda/: .condarc
files/cursor/: extensions.md  keybindings.json  settings.json
files/git/: .gitconfig
files/kanata/: config.kbd
files/ossutil/: .ossutilconfig
files/pi/: auth.json  mcp.json  models.json
files/pwsh/: Microsoft.PowerShell_profile.ps1
files/rime/: moran.custom.yaml  moran.schema.yaml
files/ssh/: config
files/tmux/: .tmux.conf
files/uv/: pyproject.toml
files/via/: cidoo_qk61.layout.json  hhkb_professional_hybrid.layout.json  polaris.layout.json
files/vim/: .vimrc  vimrc
files/vim/ftplugin/: vim.vim
files/wezterm/: .wezterm.lua
files/wsl/: wsl.conf
files/xshell/: FlatUI.xcs
files/yazi/: init.lua
